restaurant product page

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <section class="products">
       <ul class="product-grid">
         <li>
-          <a href="/restaurant/restaurant.html">
+          <a href="../src/restaurant/restaurant.html">
             <img src="/images/restaurant.svg" alt="Utensils icon from godwin external json file" />
             <h2>Restaurant</h2>
           </a>
