working on fixing product pages link

--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,13 @@
     <section class="products">
       <ul class="product-grid">
         <li>
-          <a href="../src/restaurant/restaurant.html">
+          <a href="/restaurant.html">
             <img src="/images/restaurant.svg" alt="Utensils icon from godwin external json file" />
             <h2>Restaurant</h2>
           </a>
         </li>
         <li>
-          <a href="/utensils/utensils.html">
+          <a href="/utensils.html">
             <img src="/images/gas-pump.svg" alt="Hammock Icon from Noun Project: Paul Richard" />
             <h2>Cooking Gas</h2>
           </a>
