product pages populated dynamically

--- a/src/restaurant/index.html
+++ b/src/restaurant/index.html
@@ -33,11 +33,11 @@
 
 
     <footer id="mainfooter"></footer>
-    <script src="scripts/main.js"></script>
+    <!-- <script src="scripts/main.js"></script> -->
     <script>
         document.getElementById("year").innerHTML = new Date().getFullYear();
     </script>
-    <script src="../js/restuarant.js"></script>
+    <script src="../js/restuarant.js" type="module"></script>
 </body>
 
 </html>
