--- a/src/utensils/index.html
+++ b/src/utensils/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Demonstration of Responsive Behavior page.">
+    <meta name="description" content="Wdd330 flameBite final project">
     <meta name="author" content="Godwin Akpan Essien">
     <title>FlameBite</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,11 +36,11 @@
     &copy;<span id="year"></span> | Final Project WDD131
   </footer> -->
     <footer id="mainfooter"></footer>
-    <script src="scripts/main.js"></script>
+    <!-- <script src="scripts/main.js"></script> -->
     <script>
         document.getElementById("year").innerHTML = new Date().getFullYear();
     </script>
-    <script src="../js/utensils.js"></script>
+    <script src="../js/utensils.js" type="module"></script>
 </body>
 
 </html>
