product pages and cart page dynamically populated and styled with animation

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -1,65 +1,65 @@
 <!doctype html>
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
 
-    <title>Sleep Outside | Cart</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/css/style.css" />
+  <title>Sleep Outside | Cart</title>
 
-    <script src="../js/cart.js" type="module"></script>
-    <!-- <script src="../js/ShoppingCart.mjs" type="module"></script> -->
+  <link rel="stylesheet" href="/css/style.css" />
 
-  </head>
+  <script src="../js/cart.js" type="module"></script>
+  <script src="../js/ShoppingCart.mjs" type="module"></script>
 
-  <body>
-    <header id="mainheader" class="divider"></header>
-    <main class="divider">
-      <section class="products">
-        <h2>My Cart</h2>
+</head>
 
-        <ul class="product-list">
-          <li class="cart-card divider">
-            <a href="/product_pages/marmot-ajax-3.html" class="cart-card__image">
-              <img
-                src="images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
-                alt="Marmot Ajax tent"
-              />
-            </a>
-            <a href="/product_pages/marmot-ajax-3.html">
-              <h2 class="card__name">Marmot Ajax Tent - 3-Person, 3-Season</h2>
-            </a>
-            <p class="cart-card__color">Pale Pumpkin/Terracotta</p>
-            <p class="cart-card__quantity">qty: 1</p>
-            <p class="cart-card__price">$199.99</p>
-          </li>
-          <li class="cart-card divider">
-            <a href="/product_pages/marmot-ajax-3.html" class="cart-card__image">
-              <img
-                src="images/tents/the-north-face-talus-tent-4-person-3-season-in-golden-oak-saffron-yellow~p~985rf_01~320.jpg"
-                alt="Talus Tent - 4-Person, 3-Season"
-              />
-            </a>
-            <a href="/product_pages/marmot-ajax-3.html">
-              <h2 class="card__name">
-                The North Face Talus Tent - 4-Person, 3-Season
-              </h2></a
-            >
-            <p class="cart-card__color">Golden Oak/Saffron Yellow</p>
-            <p class="cart-card__quantity">qty: 1</p>
-            <p class="cart-card__price">$199.99</p>
-          </li>
-        </ul>
-        <div class="list-footer hide">
-          <p class="list-total">Total: 0</p>
-          <a href="/checkout/index.html">Checkout</a>
-        </div>
-      </section>
-    </main>
+<body>
+  <header id="mainheader" class="divider"></header>
+  <main id="cart-container">
+    <h2>Items in Your Cart</h2>
+    <div id="cart-items"></div>
+    <p id="total-price"></p>
+    <button id="clear-cart">Clear Cart</button>
+  </main>
 
-    <footer id="mainfooter"></footer>
-  </body>
+  <footer id="mainfooter"></footer>
+  <script src="../js/cart.js" type="module"></script>
+  <!-- <script src="../js/ShoppingCart.mjs" type="module"></script> -->
+</body>
+
 </html>
+
+<!-- new cart -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shopping Cart - FlameBite</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <script src="../js/cart.js" type="module"></script>
+   <script src="../js/main.js" type="module"></script>
+</head>
+
+<body>
+   <header>
+        <h1>Your Cart</h1>
+        <a href="restaurant.html">Back to Menu</a>
+    </header>
+  <header class="divider" id="mainheader"><button id="menu"></button></header>
+
+  <main id="cart-container">
+    <h2>Items in Your Cart</h2>
+    <div id="cart-items"></div>
+    <p id="total-price"></p>
+    <button id="clear-cart">Clear Cart</button>
+  </main>
+
+  <script src="../js/cart.js" type="module"></script>
+</body>
+
+</html> -->
